Working on eraser
working on eraser

--- a/pages/example_eraser.html
+++ b/pages/example_eraser.html
@@ -55,7 +55,7 @@
 								<option value="16">16</option>			
 								</select>
 								<label>color: </label>
-						  <select id="dcolor" value="color1">
+						  <select id="color">
 							<option value="color1">000000</option>
 							<option value="color2">7F7F7F</option>
 							<option value="color3">880015</option>
