buckettool first stab
adding flood fill and bucket tool images

--- a/pages/example_floodfill.html
+++ b/pages/example_floodfill.html
@@ -48,7 +48,7 @@
 							<td height="80"  onclick="color_change(8)" bgcolor=#5F04B4 /><td height="80"  onclick="color_change(9)" bgcolor=#8904B1 />	
 							<td height="80"> 
 							 <label>size: </label>
-							  <select id="size" value="8">
+							  <select id="size">
 								<option value="2">2</option>
 								<option value="4">4</option>
 								<option value="8">8</option>
@@ -94,7 +94,7 @@
 				</table>	
 		<button id="prevpage"><img id="prevbutton" height="70px" width="70px" src="./images/prev.png"/></button>
 		<button id="nextpage"><img id="nextbutton" height="70px" width="70px" src="./images/next.png"/></button>	  
-  
+		<button id="bucket"><img id="colorbucket" height="70px" width="70px" src="./images/paintbucket_000000.png"/></button>	 
 	<div id="sketch">
 		<canvas id="paint"  width="1110" height="600">
 			<p>Unfortunately, your browser is currently unsupported by our web 
@@ -109,6 +109,6 @@
 		
     </div>  
 	<script type="text/javascript" src="jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="javascript_eraser.js"></script>
+    <script type="text/javascript" src="example_floodfill.js"></script>
   </body>
 </html>
