more flood fill work

--- a/pages/example_floodfill.html
+++ b/pages/example_floodfill.html
@@ -96,6 +96,7 @@
 		<button id="nextpage"><img id="nextbutton" height="70px" width="70px" src="./images/next.png"/></button>	  
 		<button id="bucket"><img id="colorbucket" height="70px" width="70px" src="./images/paintbucket_000000.png"/></button>	 
 	<div id="sketch">
+		<img id="theImageToWorkWith" src="./pages/coverpage.png" style="display: none" />
 		<canvas id="paint"  width="1110" height="600">
 			<p>Unfortunately, your browser is currently unsupported by our web 
 			application.  We are sorry for the inconvenience. Please use one of the 
